ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcare-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
    - http:
        paths:
          - path: /patient
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80

          - path: /appointment
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 80
